cryojax is now constistent with CTFFIND astigmatism angle conventions

--- a/tutorials/test-ctf.ipynb
+++ b/tutorials/test-ctf.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# cryojax imports\n",
     "from cryojax.simulator import CTFOptics\n",
-    "from cryojax.utils import fftfreqs, powerspectrum"
+    "from cryojax.utils import fftfreqs, cartesian_to_polar, powerspectrum"
    ]
   },
   {
@@ -92,7 +92,7 @@
    "outputs": [],
    "source": [
     "# Parameters for the CTF\n",
-    "defocus1, defocus2, asti_angle, kV, cs, ac = 12000, 12000, 0.0, 300.0, 2.7, 0.07"
+    "defocus1, defocus2, asti_angle, kV, cs, ac = 24000, 12000, 30.0, 300.0, 2.7, 0.07"
    ]
   },
   {
@@ -103,10 +103,9 @@
    "source": [
     "# Frequency coordinates\n",
     "shape = (512, 512)\n",
-    "pixel_size = 1.0\n",
+    "pixel_size = 0.9\n",
     "freqs = fftfreqs(shape, pixel_size=pixel_size)\n",
-    "k_sqr = np.sum(jnp.square(freqs), axis=-1)\n",
-    "theta = np.arctan2(freqs[..., 1], freqs[..., 0])"
+    "k_sqr, theta = cartesian_to_polar(freqs, square=True)"
    ]
   },
   {
