--- a/tutorials/test-ctf.ipynb
+++ b/tutorials/test-ctf.ipynb
@@ -116,9 +116,9 @@
    "source": [
     "# cryojax CTF and power spectrum\n",
     "optics = CTFOptics(defocus_u=defocus1, defocus_v=defocus2,\n",
-    "                   defocus_angle=np.deg2rad(asti_angle), voltage=kV,\n",
-    "                   spherical_aberration=cs, amplitude_contrast=ac, b_factor=None)\n",
-    "ctf = np.array(optics(freqs, normalize=False))"
+    "                   defocus_angle=asti_angle, voltage=kV,\n",
+    "                   spherical_aberration=cs, amplitude_contrast=ac, envelope=None)\n",
+    "ctf = np.array(optics(freqs))"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
