--- a/tutorials/test-ctf.ipynb
+++ b/tutorials/test-ctf.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# cryojax imports\n",
     "from cryojax.simulator import CTFOptics\n",
-    "from cryojax.utils import fftfreqs, cartesian_to_polar, powerspectrum"
+    "from cryojax.utils import make_frequencies, cartesian_to_polar, powerspectrum"
    ]
   },
   {
@@ -104,7 +104,7 @@
     "# Frequency coordinates\n",
     "shape = (512, 512)\n",
     "pixel_size = 0.9\n",
-    "freqs = fftfreqs(shape, pixel_size=pixel_size)\n",
+    "freqs = make_frequencies(shape, pixel_size=pixel_size)\n",
     "k_sqr, theta = cartesian_to_polar(freqs, square=True)"
    ]
   },
