--- a/tutorials/test-ctf.ipynb
+++ b/tutorials/test-ctf.ipynb
@@ -38,9 +38,10 @@
     "    fig.colorbar(im, cax=cax)\n",
     "    return fig, ax\n",
     "\n",
+    "\n",
     "def plot_images(images, cmap=\"gray\", labels=None, **kwargs):\n",
     "    ncols = len(images)\n",
-    "    fig, axes = plt.subplots(ncols=ncols, figsize=(ncols*5, 5))\n",
+    "    fig, axes = plt.subplots(ncols=ncols, figsize=(ncols * 5, 5))\n",
     "    for idx in range(ncols):\n",
     "        ax = axes[idx]\n",
     "        image = images[idx]\n",
@@ -51,6 +52,7 @@
     "        cax = divider.append_axes(\"right\", size=\"5%\", pad=0.05)\n",
     "        fig.colorbar(im, cax=cax)\n",
     "    return fig, axes\n",
+    "\n",
     "\n",
     "def plot_profiles(bins, profiles, labels=None, **kwargs):\n",
     "    nprofiles = len(profiles)\n",
@@ -92,7 +94,14 @@
    "outputs": [],
    "source": [
     "# Parameters for the CTF\n",
-    "defocus1, defocus2, asti_angle, kV, cs, ac = 24000, 12000, 30.0, 300.0, 2.7, 0.07"
+    "defocus1, defocus2, asti_angle, kV, cs, ac = (\n",
+    "    24000,\n",
+    "    12000,\n",
+    "    30.0,\n",
+    "    300.0,\n",
+    "    2.7,\n",
+    "    0.07,\n",
+    ")"
    ]
   },
   {
@@ -115,9 +124,15 @@
    "outputs": [],
    "source": [
     "# cryojax CTF and power spectrum\n",
-    "optics = CTFOptics(defocus_u=defocus1, defocus_v=defocus2,\n",
-    "                   defocus_angle=asti_angle, voltage=kV,\n",
-    "                   spherical_aberration=cs, amplitude_contrast=ac, envelope=None)\n",
+    "optics = CTFOptics(\n",
+    "    defocus_u=defocus1,\n",
+    "    defocus_v=defocus2,\n",
+    "    defocus_angle=asti_angle,\n",
+    "    voltage=kV,\n",
+    "    spherical_aberration=cs,\n",
+    "    amplitude_contrast=ac,\n",
+    "    envelope=None,\n",
+    ")\n",
     "ctf = np.array(optics(freqs))"
    ]
   },
@@ -128,8 +143,18 @@
    "outputs": [],
    "source": [
     "# cisTEM CTF\n",
-    "cisTEM_optics = CTF(kV=kV, cs=cs, ac=ac, defocus1=defocus1, defocus2=defocus2, astig_angle=asti_angle, pixel_size=pixel_size)\n",
-    "cisTEM_ctf = np.vectorize(lambda k_sqr, theta: cisTEM_optics.Evaluate(k_sqr, theta))(k_sqr.ravel()*pixel_size**2, theta.ravel()).reshape(shape)"
+    "cisTEM_optics = CTF(\n",
+    "    kV=kV,\n",
+    "    cs=cs,\n",
+    "    ac=ac,\n",
+    "    defocus1=defocus1,\n",
+    "    defocus2=defocus2,\n",
+    "    astig_angle=asti_angle,\n",
+    "    pixel_size=pixel_size,\n",
+    ")\n",
+    "cisTEM_ctf = np.vectorize(\n",
+    "    lambda k_sqr, theta: cisTEM_optics.Evaluate(k_sqr, theta)\n",
+    ")(k_sqr.ravel() * pixel_size**2, theta.ravel()).reshape(shape)"
    ]
   },
   {
@@ -153,7 +178,9 @@
    "source": [
     "# Compute cryojax and cisTEM power spectrum\n",
     "spectrum1D, k_bins = powerspectrum(ctf, freqs, pixel_size=pixel_size)\n",
-    "cisTEM_spectrum1D, k_bins = powerspectrum(cisTEM_ctf, freqs, pixel_size=pixel_size)"
+    "cisTEM_spectrum1D, k_bins = powerspectrum(\n",
+    "    cisTEM_ctf, freqs, pixel_size=pixel_size\n",
+    ")"
    ]
   },
   {
